--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import "sass/layout/global";
 @import "sass/layout/splash-screen";
 @import "sass/layout/navigation";
+@import "sass/layout/components/card";
 @import "sass/layout/components/expansion-panel";
 @import "sass/layout/components/dialog";
 @import "sass/layout/components/form-errors";
