SB-1196 Implement user management module

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@
 @import "sass/layout/components/dialog";
 @import "sass/layout/components/form-errors";
 @import "sass/layout/components/toastr";
+@import "sass/layout/components/table";
 
 // This is necessary for the search results tabs.
 // TODO: Figure out a better way.
