--- a/src/sass/layout/components/card.scss
+++ b/src/sass/layout/components/card.scss
@@ -1,3 +1,26 @@
 .mat-card {
   background: #132430;
 }
+
+.mat-card-title {
+  font-size: 18px;
+  font-weight: 300;
+  font-family: 'Open Sans', sans-serif;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.mat-card-title:before {
+  content: ' ';
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  position: absolute;
+  bottom: -10px;
+  left: 0px;
+  width: 100%;
+  background: #2384be;
+  height: 1px;
+}
