--- a/src/app/modules/core/pages/profile/profile.component.scss
+++ b/src/app/modules/core/pages/profile/profile.component.scss
@@ -1,6 +1,4 @@
 ul.profile {
-  padding: 0px 0px 20px 0px;
-
   &:after {
     clear: both;
     content: ' ';
@@ -10,5 +8,11 @@ ul.profile {
     float: left;
     list-style: none;
     margin-right: 15px;
+  }
+
+  @media screen and(max-width: 380px){
+    a {
+      font-size: 16px;
+    }
   }
 }
