Have aligned gaps when sidebar is open.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -142,7 +142,7 @@
                 <div fxFlex="1 1 auto">
                     <router-outlet></router-outlet>
                 </div>
-                <div [fxFlex]="sideNavFlex().right">&nbsp;</div>
+                <div [fxFlex]="sideNavFlex().right" style="transition: all 0.3s">&nbsp;</div>
             </div>
 
         </mat-sidenav-content>
