SB-1196 Don't expect exact url match for Users sidebar link to be active.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -126,8 +126,7 @@
                         <li><a>Storages</a></li>
                         <li>
                             <a routerLink="admin/users"
-                               routerLinkActive="active"
-                               [routerLinkActiveOptions]="{exact: true}">
+                               routerLinkActive="active">
                                 Users
                             </a>
                         </li>
