--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
 @import "sass/layout/components/expansion-panel";
 @import "sass/layout/components/dialog";
 @import "sass/layout/components/form-errors";
+@import "sass/layout/components/toastr";
 
 // This is necessary for the search results tabs.
 // TODO: Figure out a better way.
