SB-1196 fix login error handling (partially broken by PR #774)

--- a/src/app/modules/core/dialogs/login/login.dialog.component.html
+++ b/src/app/modules/core/dialogs/login/login.dialog.component.html
@@ -16,6 +16,6 @@
       <mat-error *ngIf="hasError('password', 'required')">Please enter a password.</mat-error>
     </mat-form-field>
     <div class="spacer">&nbsp;</div>
-    <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid || (pending$ | async ) == 'pending' || (pending$ | async) == 'authenticated'">Login</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid || (sessionState$ | async ) == 'pending' || (sessionState$ | async) == 'authenticated'">Login</button>
   </form>
 </div>
