SB-1196 Username column is a link pointing to user view.

--- a/src/app/modules/user-management/pages/list-users/list-users.component.html
+++ b/src/app/modules/user-management/pages/list-users/list-users.component.html
@@ -18,7 +18,7 @@
             <table mat-table [dataSource]="data" multiTemplateDataRows>
                 <ng-container matColumnDef="username">
                     <th mat-header-cell *matHeaderCellDef>Username</th>
-                    <td mat-cell *matCellDef="let row">{{row.username}}</td>
+                    <td mat-cell *matCellDef="let row"><a [routerLink]="[row.username, 'view']">{{row.username}}</a></td>
                 </ng-container>
 
                 <ng-container matColumnDef="enabled">
