--- a/src/app/shared/form/form-field-errors/form-field-errors.component.html
+++ b/src/app/shared/form/form-field-errors/form-field-errors.component.html
@@ -1,3 +1,6 @@
-<ng-container *ngFor="let message of getErrors()">
+<ng-container *ngFor="let message of getApiErrors()">
+    {{ message }}
+</ng-container>
+<ng-container *ngFor="let message of getFormErrors()">
     {{ message }}
 </ng-container>
