--- a/src/app/modules/user-management/pages/view-user/view-user.component.scss
+++ b/src/app/modules/user-management/pages/view-user/view-user.component.scss
@@ -55,3 +55,7 @@
 ::ng-deep .mat-tab-header {
   border-bottom: 1px solid rgb(44, 130, 188);
 }
+
+::ng-deep .mat-list-item-disabled {
+  background: transparent;
+}
