--- a/src/app/modules/user-management/pages/manage-user/form/access-model-listing/user-access-model.component.html
+++ b/src/app/modules/user-management/pages/manage-user/form/access-model-listing/user-access-model.component.html
@@ -24,10 +24,38 @@
             </td>
         </ng-container>
 
+        <!-- Storage Column -->
+        <ng-container matColumnDef="storageId">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="storageId">Storage</th>
+            <td mat-cell *matCellDef="let pathPrivilege">
+                {{pathPrivilege.storageId}}
+            </td>
+        </ng-container>
+
+        <!-- Repository Column -->
+        <ng-container matColumnDef="repositoryId">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="repositoryId">Repository</th>
+            <td mat-cell *matCellDef="let pathPrivilege">
+                {{pathPrivilege.repositoryId}}
+            </td>
+        </ng-container>
+
         <!-- Path Column -->
         <ng-container matColumnDef="path">
             <th mat-header-cell *matHeaderCellDef mat-sort-header="path">Path</th>
-            <td mat-cell *matCellDef="let pathPrivilege"> {{pathPrivilege.path}}</td>
+            <td mat-cell *matCellDef="let pathPrivilege">
+                {{pathPrivilege.path}}
+                <span *ngIf="!pathPrivilege.path">/</span>
+            </td>
+        </ng-container>
+
+        <!-- Wildcard Column -->
+        <ng-container matColumnDef="wildcard">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="wildcard">Wildcard</th>
+            <td mat-cell *matCellDef="let pathPrivilege">
+                <span *ngIf="pathPrivilege.wildcard" class="status-green">Yes</span>
+                <span *ngIf="!pathPrivilege.wildcard" class="status-red">No</span>
+            </td>
         </ng-container>
 
         <!-- Privileges Column -->
@@ -39,24 +67,24 @@
         <!-- Actions column -->
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef class="actions">
-                <button mat-icon-button type="button" *ngIf="!isFormDisabled()">
+                <button mat-icon-button type="button" *ngIf="!isParentFormDisabled()">
                     <i class="ion-md-add" (click)="showForm()"></i>
                 </button>
                 <button mat-icon-button
                         [disabled]="!isSomeSelected()"
                         (click)="deleteSelected()"
                         title="Delete selected items"
-                        type="button" *ngIf="!isFormDisabled()">
+                        type="button" *ngIf="!isParentFormDisabled()">
                     <i class="ion-md-trash"></i>
                 </button>
             </th>
             <td mat-cell *matCellDef="let pathPrivilege; let index = index" class="actions">
                 <button mat-icon-button type="button" title="Edit" (click)="showForm(pathPrivilege, index)">
-                    <i class="ion-md-eye" *ngIf="isFormDisabled()"></i>
-                    <i class="ion-md-create" *ngIf="!isFormDisabled()"></i>
+                    <i class="ion-md-eye" *ngIf="isParentFormDisabled()"></i>
+                    <i class="ion-md-create" *ngIf="!isParentFormDisabled()"></i>
                 </button>
 
-                <button mat-icon-button (click)="delete(index)" type="button" *ngIf="!isFormDisabled()">
+                <button mat-icon-button (click)="delete(index)" type="button" *ngIf="!isParentFormDisabled()">
                     <i class="ion-md-trash"></i>
                 </button>
             </td>
@@ -64,25 +92,6 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns" class="blue-bottom-border"></tr>
         <tr mat-row *matRowDef="let pathPrivilege; columns: displayedColumns;"></tr>
-
-        <!--
-                Not possible because of https://github.com/angular/material2/issues/9527
-
-                <ng-container matColumnDef="managePermission">
-                    <td mat-cell *matCellDef="let element; let index = index" colspan="4">
-                        <div>
-                            <app-access-model-path-privilege [pathPrivilege]="editPath"
-                                                             [index]="editPathIndex">
-                            </app-access-model-path-privilege>
-
-                            <button (click)="editPath = null">reset</button>
-                        </div>
-                    </td>
-                </ng-container>
-
-                <tr mat-row
-                    *matRowDef="let row; columns: ['managePermission']; when: isEditingRow;"></tr>
-        -->
 
     </table>
 
@@ -94,58 +103,84 @@
     </div>
 
     <ng-container *ngIf="showEditForm">
-        <div style="border: 1px solid #2c82bc; padding: 10px; margin-top: 10px; margin-bottom: 10px;" @fadeInOutOverlap>
+        <div class="managePathPrivilege" @fadeInOutOverlap>
             <div [formGroup]="privilegeForm">
-                <div fxLayout="row" fxLayoutGap="2%">
-                    <div fxFlex="1 0 auto">
-                        <mat-form-field style="width: 100%;">
-                            <input matInput placeholder="Path" formControlName="path" autocomplete="no"/>
-                            <mat-error *ngIf="privilegeForm.getError('required', ['path'])">
-                                Path field is required.
-                            </mat-error>
-                            <mat-error *ngIf="privilegeForm.getError('pattern', ['path']) && isRepositoryType()">
-                                The path <span style="font-weight: bold;">must</span> follow the pattern
-                                {{'/storages/{storageId}/{repositoryId}/' }}!<br>
-                            </mat-error>
-                            <mat-error *ngIf="privilegeForm.getError('pattern', ['path']) && (isUrlType() || isWildcardType())">
-                                The path <span style="font-weight: bold;">must</span> follow the pattern
-                                {{'/storages/{storageId}/{repositoryId}/path/to/somewhere/' }}!<br>
-                            </mat-error>
-                            <mat-error *ngIf="privilegeForm.getError('unique', ['path'])">
-                                This path has already been added!<br>
-                            </mat-error>
-                        </mat-form-field>
-                    </div>
-                </div>
 
-                <div fxLayout="column">
-                    <ng-container *ngIf="!isFormDisabled()">
+                <mat-tab-group [dynamicHeight]="true">
+                    <mat-tab label="Route details">
+                        <div class="clearfix">&nbsp;</div>
+                        <div fxLayout="row" fxLayoutGap="2%">
+                            <div fxFlex="1 0 auto">
+
+                                <search-autocomplete
+                                        placeholder="Storage"
+                                        [searchControl]="privilegeForm.get('storageId')"
+                                        [autoActiveFirstOption]="true"
+                                        [forceSelection]="true"
+                                        [dataSource]="storageSearchDataSource"
+                                        width="100%"
+                                >
+                                </search-autocomplete>
+                            </div>
+                        </div>
+                        <div fxLayout="row" fxLayoutGap="2%">
+                            <div fxFlex="1 0 auto">
+
+                                <search-autocomplete
+                                        placeholder="Repository"
+                                        [autoActiveFirstOption]="true"
+                                        [forceSelection]="true"
+                                        [dataSource]="repositorySearchDataSource"
+                                        [searchControl]="privilegeForm.get('repositoryId')"
+                                        [dependsOn]="privilegeForm.get('storageId')"
+                                        width="100%"
+                                >
+                                </search-autocomplete>
+                            </div>
+                        </div>
+                        <div fxLayout="row" fxLayoutGap="2%">
+                            <div fxFlex="1 0 auto">
+                                <mat-form-field floatLabel="always">
+                                    <input matInput placeholder="Path" formControlName="path" type="search"/>
+
+                                    <mat-error *ngIf="privilegeForm.get('path').invalid">
+                                        <form-field-errors [field]="privilegeForm.get('path')"></form-field-errors>
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <div fxLayout="row" fxLayoutGap="2%">
+                            <div fxFlex="1 0 auto">
+                                <mat-checkbox formControlName="wildcard" labelPosition="after" class="wildcard-checkbox" color="primary">
+                                    <ng-container *ngIf="privilegeForm.get('wildcard').value === true">
+                                        <span style="text-decoration: underline;">Include</span> all subpaths
+                                    </ng-container>
+                                    <ng-container *ngIf="privilegeForm.get('wildcard').value !== true">
+                                        <span style="text-decoration: underline;">Exclude</span> all subpaths
+                                    </ng-container>
+                                </mat-checkbox>
+                            </div>
+                        </div>
+                        <div class="clearfix">&nbsp;</div>
+                    </mat-tab>
+                    <mat-tab label="Privileges">
                         <mat-selection-list formControlName="privileges" [compareWith]="compareSelected">
                             <mat-list-option *ngFor="let privilege of assignablePrivileges; let index = index"
                                              checkboxPosition="before"
-                                             [value]="privilege"
+                                             [value]="privilege.name"
                             >
-                                {{ privilege }}
+                                {{ privilege.name }}
                             </mat-list-option>
                         </mat-selection-list>
-                    </ng-container>
-                    <ng-container *ngIf="isFormDisabled()">
-                        <mat-selection-list formControlName="privileges">
-                            <mat-list-option *ngFor="let privilege of privilegeFormPrivileges(); let index = index"
-                                             checkboxPosition="before"
-                                             [value]="privilege"
-                            >
-                                {{ privilege }}
-                            </mat-list-option>
-                        </mat-selection-list>
-                    </ng-container>
-                </div>
+                    </mat-tab>
+                </mat-tab-group>
 
                 <div fxLayoutAlign="center center" class="formSubmitButtons">
-                    <button mat-raised-button color="primary" type="button" (click)="save()" *ngIf="!isFormDisabled()" [disabled]="privilegeForm.invalid">
+                    <button mat-raised-button color="primary" type="button" (click)="save()" *ngIf="!isParentFormDisabled()"
+                            [disabled]="privilegeForm.invalid">
                         Save
                     </button>
-                    <button mat-raised-button color="warn" type="button" (click)="delete()" *ngIf="!isFormDisabled()">
+                    <button mat-raised-button color="warn" type="button" (click)="delete()" *ngIf="!isParentFormDisabled()">
                         Delete
                     </button>
                     <button mat-button type="button" (click)="resetState()">
