--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @import "sass/layout/splash-screen";
 @import "sass/layout/navigation";
 @import "sass/layout/breadcrumbs";
+@import "sass/layout/components/autocomplete";
 @import "sass/layout/components/card";
 @import "sass/layout/components/expansion-panel";
 @import "sass/layout/components/dialog";
